test/expected/declare_nmo_parens_rck_v.out
struct S; declare () as non-member operator (reference to const S)
         ^
10: error: operator () can only be a member
